--- a/Demo/BLSAugmentedControllerDemo/BLSAugmentedControllerDemo/Base.lproj/Main.storyboard
+++ b/Demo/BLSAugmentedControllerDemo/BLSAugmentedControllerDemo/Base.lproj/Main.storyboard
@@ -20,16 +20,29 @@
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pdk-dM-SGk">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <connections>
-                                    <segue destination="m8R-b0-abZ" kind="embed" id="dOK-Zz-bdb"/>
+                                    <segue destination="m8R-b0-abZ" kind="embed" identifier="BLSAugmentedViewController" id="dOK-Zz-bdb"/>
                                 </connections>
                             </containerView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ZIp-8D-rF5">
+                                <rect key="frame" x="20" y="552" width="560" height="29"/>
+                                <segments>
+                                    <segment title="Map"/>
+                                    <segment title="VR"/>
+                                </segments>
+                                <connections>
+                                    <action selector="segmentedControlValueChanged:" destination="vXZ-lx-hvc" eventType="valueChanged" id="tYj-KY-ip4"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="pdk-dM-SGk" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="19p-nL-2Rh"/>
+                            <constraint firstAttribute="trailing" secondItem="ZIp-8D-rF5" secondAttribute="trailing" constant="20" id="1hj-M8-C32"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="pdk-dM-SGk" secondAttribute="bottom" id="B7C-8z-i04"/>
                             <constraint firstAttribute="trailing" secondItem="pdk-dM-SGk" secondAttribute="trailing" id="GaZ-v2-hse"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="ZIp-8D-rF5" secondAttribute="bottom" constant="20" id="Saj-jO-6fq"/>
                             <constraint firstItem="pdk-dM-SGk" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="bIu-PE-F3t"/>
+                            <constraint firstItem="ZIp-8D-rF5" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" id="fM6-jP-xsq"/>
                         </constraints>
                     </view>
                 </viewController>
